// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render selector 1`] = `
<div>
  <div
    class="signInPage"
  >
    <div
      class="backgroundImage"
    />
    <div
      class="contents"
    >
      <svg
        class="grailLogo purple"
        data-testid="grail-logo"
        id="grail-logo-svg"
        viewBox="0, 0, 572, 108"
      >
        <path
          d="m 56.441,63.844 23.514,0 0,19.543 c -6.414,4.773 -15.365,7.905 -25.21,7.905 -21.331,0 -35.502,-15.811 -35.502,-37.441 0,-20.287 14.646,-36.995 35.396,-36.995 12.353,0 18.728,3.747 26.044,9.795 0.919,0.76 2.279,0.653 3.046,-0.26 l 8.845,-10.547 c 0.772,-0.92 0.65,-2.313 -0.284,-3.069 C 82.125,4.554 71.884,0 54.639,0 21.422,0 0,24.764 0,54.15 0,84.729 21.48,108 54.149,108 c 17.73,0 32.035,-6.854 42.255,-15.174 0.837,-0.681 1.302,-1.712 1.302,-2.791 l 0,-39.991 c 0,-1.193 -0.967,-2.161 -2.161,-2.161 l -39.104,0 c -1.193,0 -2.16,0.968 -2.16,2.161 l 0,11.641 c 0,1.192 0.967,2.159 2.16,2.159"
        />
        <path
          d="m 164.704,53.56 0,-34.614 26.366,0 c 13.404,0 21.358,5.892 21.358,17.233 0,10.606 -8.248,17.381 -21.211,17.381 l -26.513,0 z M 230.84,35.149 c 0,-20.179 -14.583,-32.7 -38.297,-32.7 l -43.781,0 c -1.201,0 -2.176,0.974 -2.176,2.176 l 0,98.756 c 0,1.201 0.975,2.176 2.176,2.176 l 13.767,0 c 1.201,0 2.175,-0.975 2.175,-2.176 l 0,-33.766 22.684,0 24.251,34.405 c 0.679,0.963 1.784,1.537 2.964,1.537 l 15.958,0 c 1.474,0 2.332,-1.666 1.476,-2.866 L 206.242,66.523 C 220.676,62.546 230.84,52.234 230.84,35.149"
        />
        <path
          d="m 304.652,65.008 17.441,-41.064 17.442,41.064 -34.883,0 z m 8.549,-60.621 -43.098,98.649 c -0.52,1.189 0.352,2.521 1.649,2.521 l 13.296,0 c 1.444,0 2.748,-0.864 3.314,-2.194 l 9.525,-22.427 48.412,0 9.527,22.427 c 0.564,1.33 1.869,2.194 3.313,2.194 l 13.88,0 c 1.298,0 2.169,-1.332 1.649,-2.521 L 331.571,4.387 c -0.516,-1.18 -1.681,-1.943 -2.969,-1.943 l -12.433,0 c -1.288,0 -2.453,0.763 -2.968,1.943"
        />
        <path
          d="m 513.173,89.055 0,-84.43 c 0,-1.202 -0.973,-2.176 -2.174,-2.176 l -13.767,0 c -1.201,0 -2.175,0.974 -2.175,2.176 l 0,98.751 c 0,1.201 0.974,2.175 2.175,2.175 l 71.844,0 c 1.201,0 2.176,-0.974 2.176,-2.175 l 0,-12.145 c 0,-1.203 -0.975,-2.176 -2.176,-2.176 l -55.903,0"
        />
        <path
          d="m 420.573,62.693 19.898,0 c 1.114,0 2.016,-0.902 2.016,-2.015 l 0,-13.355 c 0,-1.113 -0.902,-2.016 -2.016,-2.016 l -19.898,0 c -1.113,0 -2.016,0.903 -2.016,2.016 l 0,13.355 c 0,1.113 0.903,2.015 2.016,2.015"
        />
        <path
          d="m 420.573,19.835 19.898,0 c 1.114,0 2.016,-0.902 2.016,-2.015 l 0,-13.355 c 0,-1.113 -0.902,-2.016 -2.016,-2.016 l -19.898,0 c -1.113,0 -2.016,0.903 -2.016,2.016 l 0,13.355 c 0,1.113 0.903,2.015 2.016,2.015"
        />
        <path
          d="m 419.997,35.721 21.05,0 c 0.795,0 1.44,-0.644 1.44,-1.44 l 0,-3.42 c 0,-0.795 -0.645,-1.44 -1.44,-1.44 l -21.05,0 c -0.795,0 -1.44,0.645 -1.44,1.44 l 0,3.42 c 0,0.796 0.645,1.44 1.44,1.44"
        />
        <path
          d="m 420.573,105.551 19.898,0 c 1.114,0 2.016,-0.903 2.016,-2.016 l 0,-13.354 c 0,-1.114 -0.902,-2.017 -2.016,-2.017 l -19.898,0 c -1.113,0 -2.016,0.903 -2.016,2.017 l 0,13.354 c 0,1.113 0.903,2.016 .016,2.016"
        />
        <path
          d="m 419.997,78.579 21.05,0 c 0.795,0 1.44,-0.644 1.44,-1.44 l 0,-3.42 c 0,-0.795 -0.645,-1.44 -1.44,-1.44 l -21.05,0 c -0.795,0 -1.44,0.645 -1.44,1.44 l 0,3.42 c 0,0.796 0.645,1.44 1.44,1.44"
        />
      </svg>
      <p
        class="MuiTypography-root MuiTypography-body2 mission"
      >
        Detect cancer early, when it can be cured.
      </p>
      <div
        class="sign-in"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-raised MuiButton-raisedPrimary MuiButton-sizeLarge"
          data-testid="sign-in-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Sign In
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`render selector with child 1`] = `
<div>
  <div
    class="signInPage"
  >
    <div
      class="backgroundImage"
    />
    <div
      class="contents"
    >
      <svg
        class="grailLogo purple"
        data-testid="grail-logo"
        id="grail-logo-svg"
        viewBox="0, 0, 572, 108"
      >
        <path
          d="m 56.441,63.844 23.514,0 0,19.543 c -6.414,4.773 -15.365,7.905 -25.21,7.905 -21.331,0 -35.502,-15.811 -35.502,-37.441 0,-20.287 14.646,-36.995 35.396,-36.995 12.353,0 18.728,3.747 26.044,9.795 0.919,0.76 2.279,0.653 3.046,-0.26 l 8.845,-10.547 c 0.772,-0.92 0.65,-2.313 -0.284,-3.069 C 82.125,4.554 71.884,0 54.639,0 21.422,0 0,24.764 0,54.15 0,84.729 21.48,108 54.149,108 c 17.73,0 32.035,-6.854 42.255,-15.174 0.837,-0.681 1.302,-1.712 1.302,-2.791 l 0,-39.991 c 0,-1.193 -0.967,-2.161 -2.161,-2.161 l -39.104,0 c -1.193,0 -2.16,0.968 -2.16,2.161 l 0,11.641 c 0,1.192 0.967,2.159 2.16,2.159"
        />
        <path
          d="m 164.704,53.56 0,-34.614 26.366,0 c 13.404,0 21.358,5.892 21.358,17.233 0,10.606 -8.248,17.381 -21.211,17.381 l -26.513,0 z M 230.84,35.149 c 0,-20.179 -14.583,-32.7 -38.297,-32.7 l -43.781,0 c -1.201,0 -2.176,0.974 -2.176,2.176 l 0,98.756 c 0,1.201 0.975,2.176 2.176,2.176 l 13.767,0 c 1.201,0 2.175,-0.975 2.175,-2.176 l 0,-33.766 22.684,0 24.251,34.405 c 0.679,0.963 1.784,1.537 2.964,1.537 l 15.958,0 c 1.474,0 2.332,-1.666 1.476,-2.866 L 206.242,66.523 C 220.676,62.546 230.84,52.234 230.84,35.149"
        />
        <path
          d="m 304.652,65.008 17.441,-41.064 17.442,41.064 -34.883,0 z m 8.549,-60.621 -43.098,98.649 c -0.52,1.189 0.352,2.521 1.649,2.521 l 13.296,0 c 1.444,0 2.748,-0.864 3.314,-2.194 l 9.525,-22.427 48.412,0 9.527,22.427 c 0.564,1.33 1.869,2.194 3.313,2.194 l 13.88,0 c 1.298,0 2.169,-1.332 1.649,-2.521 L 331.571,4.387 c -0.516,-1.18 -1.681,-1.943 -2.969,-1.943 l -12.433,0 c -1.288,0 -2.453,0.763 -2.968,1.943"
        />
        <path
          d="m 513.173,89.055 0,-84.43 c 0,-1.202 -0.973,-2.176 -2.174,-2.176 l -13.767,0 c -1.201,0 -2.175,0.974 -2.175,2.176 l 0,98.751 c 0,1.201 0.974,2.175 2.175,2.175 l 71.844,0 c 1.201,0 2.176,-0.974 2.176,-2.175 l 0,-12.145 c 0,-1.203 -0.975,-2.176 -2.176,-2.176 l -55.903,0"
        />
        <path
          d="m 420.573,62.693 19.898,0 c 1.114,0 2.016,-0.902 2.016,-2.015 l 0,-13.355 c 0,-1.113 -0.902,-2.016 -2.016,-2.016 l -19.898,0 c -1.113,0 -2.016,0.903 -2.016,2.016 l 0,13.355 c 0,1.113 0.903,2.015 2.016,2.015"
        />
        <path
          d="m 420.573,19.835 19.898,0 c 1.114,0 2.016,-0.902 2.016,-2.015 l 0,-13.355 c 0,-1.113 -0.902,-2.016 -2.016,-2.016 l -19.898,0 c -1.113,0 -2.016,0.903 -2.016,2.016 l 0,13.355 c 0,1.113 0.903,2.015 2.016,2.015"
        />
        <path
          d="m 419.997,35.721 21.05,0 c 0.795,0 1.44,-0.644 1.44,-1.44 l 0,-3.42 c 0,-0.795 -0.645,-1.44 -1.44,-1.44 l -21.05,0 c -0.795,0 -1.44,0.645 -1.44,1.44 l 0,3.42 c 0,0.796 0.645,1.44 1.44,1.44"
        />
        <path
          d="m 420.573,105.551 19.898,0 c 1.114,0 2.016,-0.903 2.016,-2.016 l 0,-13.354 c 0,-1.114 -0.902,-2.017 -2.016,-2.017 l -19.898,0 c -1.113,0 -2.016,0.903 -2.016,2.017 l 0,13.354 c 0,1.113 0.903,2.016 .016,2.016"
        />
        <path
          d="m 419.997,78.579 21.05,0 c 0.795,0 1.44,-0.644 1.44,-1.44 l 0,-3.42 c 0,-0.795 -0.645,-1.44 -1.44,-1.44 l -21.05,0 c -0.795,0 -1.44,0.645 -1.44,1.44 l 0,3.42 c 0,0.796 0.645,1.44 1.44,1.44"
        />
      </svg>
      <p
        class="MuiTypography-root MuiTypography-body2 mission"
      >
        Detect cancer early, when it can be cured.
      </p>
      <div
        class="sign-in"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-raised MuiButton-raisedPrimary MuiButton-sizeLarge"
          data-testid="sign-in-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Sign In
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        data-testid="test-child-element"
      />
    </div>
  </div>
</div>
`;
